# atotw-mcp

./: .gitignore  CLAUDE.md  README.md  fetch.sh  index.md  mcp_server.py  pyproject.toml  sync.py  test_mcp.py  test_sync.py  tt.json
